--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.19.2",
     "antd": "^5.25.1",
     "next": "15.3.2",
     "react": "^19.0.0",
