--- a/.example.env
+++ b/.example.env
@@ -6,6 +6,7 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/
 NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_REDIRECT_URL=/
 
+MONGODB_URL = mongodb://localhost:27017/chat-app
 
 # Test User 1 (Md Imran Hossain)
 # username: imran123 
