--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "antd": "^5.25.1",
     "dayjs": "^1.11.13",
+    "firebase": "^11.7.3",
     "mongoose": "^8.14.2",
     "next": "15.3.2",
     "react": "^19.0.0",
