upload to cloudinary

--- a/.example.env
+++ b/.example.env
@@ -8,6 +8,12 @@ NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_REDIRECT_URL=/
 
 MONGODB_URL = mongodb://localhost:27017/chat-app
 
+
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+
 # Test User 1 (Md Imran Hossain) 
 # username: imran123 
 # password: Imran###$$$12345
