--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@clerk/nextjs": "^6.19.2",
     "@reduxjs/toolkit": "^2.8.2",
     "antd": "^5.25.1",
+    "cloudinary": "^2.6.1",
     "dayjs": "^1.11.13",
     "mongoose": "^8.14.2",
     "next": "15.3.2",
+    "nextjs-toast-notify": "^1.38.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
