get all users action

--- a/.example.env
+++ b/.example.env
@@ -19,5 +19,11 @@ CLOUDINARY_API_SECRET=
 # password: Imran###$$$12345
 
 # Test User 2 (Jibon Ali)
-# username: ali123 
+# username: jibon123 
 # password: Ali###$$$12345
+
+# Test User 3 (Sirajul Islam)
+# username: siraj123 
+# password: Siraj###$$$12345
+
+
