set chats in global

--- a/.example.env
+++ b/.example.env
@@ -26,4 +26,10 @@ CLOUDINARY_API_SECRET=
 # username: siraj123 
 # password: Siraj###$$$12345
 
+# Test User 4 (Habibul Bashar)
+# username: habib123 
+# password: Habib###$$$12345
+
+
+
 
