chat friend done

--- a/.example.env
+++ b/.example.env
@@ -30,6 +30,15 @@ CLOUDINARY_API_SECRET=
 # username: habib123 
 # password: Habib###$$$12345
 
+# Test User 5 (Mehedi Hasan)
+# username: mehedi123 
+# password: Mehedi###$$$12345
+
+# Test User 6 (Rifat Rizwan)
+# username: rifat123 
+# password: Rifat###$$$12345
+
+
 
 
 
